fix mobile sizing for signup panel - still too long on iphone

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1290,7 +1290,7 @@ body {
 				color: #B61F1F;
 				text-transform: uppercase;
 				font-weight: 100;
-				font-size: 60px;
+				font-size: 3.5em;
 				line-height: 1.1em;
 			}
 
